--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Black And White Bootstrap Landing Page / Portfolio</title>
+    <title>Jan Farun</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -28,15 +28,15 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
   </head>
   <body>
-    <section id="intro" style="background-image: url('img/ein-steig.jpg');" class="intro">       
+    <section id="intro" style="background-image: url('img/main.jpg');" class="intro">       
       <div class="overlay"></div>
       <div class="content">
         <div class="container clearfix">
           <div class="row">
             <div class="col-lg-8 col-md-12 mx-auto">
-              <p class="italic">Oh, hello, nice to meet you!</p>
-              <h1>I am B&amp;W Landing page or portfolio Theme.</h1>
-              <p class="italic">I am a ready to be your portfolio, telling your stories and short presentations.</p>
+              <h1>Jan Farun</h1>
+              <p class="italic">"Do what you love and you will never have to work."<br>
+                Jan Farun</p>
             </div>
           </div>
         </div>
@@ -46,7 +46,7 @@
     <!-- navbar-->
     <header class="header">
       <nav class="navbar navbar-expand-lg">
-        <div class="container"><a href="#intro" class="navbar-brand link-scroll"><img src="img/logo.png" alt="" class="img-fluid"></a>
+        <div class="container"><a href="#intro" class="navbar-brand link-scroll">Jan Farun</a>
           <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></i></button>
           <div id="navbarSupportedContent" class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
@@ -67,12 +67,17 @@
         <div class="row">
           <div class="col-lg-6">
             <h2 class="heading">About me</h2>
-            <p class="lead">This can be an about section.</p>
-            <p>Impossible considered invitation him men instrument saw celebrated unpleasant. Put rest and must set kind next many near nay. He exquisite continued explained middleton am. Voice hours young woody has she think equal. Estate moment he at on wonder at season little. Six garden result summer set family esteem nay estate. End admiration mrs unreserved discovered comparison especially invitation. </p>
-            <p>Delightful unreserved impossible few estimating men favourable see entreaties. She propriety immediate was improving. He or entrance humoured likewise moderate. Much nor game son say feel. Fat make met can must form into gate. Me we offending prevailed discovery. </p>
+            <p class="lead">My name is Jan Farun. I’m computer programmer analyst.</p>
+            <p>
+              I live in Toronto.
+               I love programming, creating software and application with other people. If I’m not working on something
+                I’m probably researching how to create more amazing things.
+                 I’m reaching for the starts. </p>
+            <p><a target="_blank" href="img/presentation resume.rtf.pdf">Resume</a></p>
+            <p><a target="_blank" href="img/Presentation cover letter.rtf.pdf">Cover Letter</a></p>
           </div>
           <div class="col-lg-5 mx-auto">
-            <p><img src="img/japan-mountains.jpg" alt="" class="img-fluid rounded-circle"></p>
+            <p><img src="img/jan.png" alt="" class="img-fluid rounded-circle"></p>
           </div>
         </div>
       </div>
