--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
     <!-- Font Awesome CSS-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
     <!-- Google fonts - Montserrat for headings, Cardo for copy-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Cardo:400,400italic,700">
@@ -52,7 +53,8 @@
             <ul class="navbar-nav ml-auto">
               <li class="nav-item"><a href="#intro" class="nav-link link-scroll">Home</a></li>
               <li class="nav-item"><a href="#about" class="nav-link link-scroll">About </a></li>
-              <li class="nav-item"><a href="#services" class="nav-link link-scroll">Services</a></li>
+              <li class="nav-item"><a href="#services" class="nav-link link-scroll">Academic Credentials</a></li>
+              <li class="nav-item"><a href="#text2" class="nav-link link-scroll">Academic Projects</a></li>
               <li class="nav-item"><a href="#portfolio" class="nav-link link-scroll">Portfolio</a></li>
               <li class="nav-item"><a href="#text" class="nav-link link-scroll">Text</a></li>
               <li class="nav-item"><a href="#contact" class="nav-link link-scroll">Contact</a></li>
@@ -88,20 +90,20 @@
       <div class="container">
         <div class="row services">
           <div class="col-lg-12">
-            <h2 class="heading">Services</h2>
+            <h2 class="heading">Academic Credentails</h2>
             <div class="row">
               <div class="col-md-4">
                 <div class="box">
-                  <div class="icon"><i class="fa fa-desktop"></i></div>
-                  <h5>Webdesign</h5>
-                  <p>Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>
+                  <div class="icon"><a target="_blank" href="img/diploma.jpg"><i class="fas fa-graduation-cap"></i></a></div>
+                  <h5>Education</h5>
+                  <p>Computer Programmer Analyst 3 Years Diploma from George Brown College.</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="box">
-                  <div class="icon"><i class="fa fa-print"></i></div>
-                  <h5>Print</h5>
-                  <p>Advantage old had otherwise sincerity dependent additions. It in adapted natural.</p>
+                  <div class="icon"><a target="_blank" href="img/Academic_Transcipt.pdf"><i class="fas fa-scroll"></i></a></div>
+                  <h5>Academic Transcript</h5>
+                  <p>Transcript with all my grades and academic records.</p>
                 </div>
               </div>
               <div class="col-md-4">
@@ -117,7 +119,25 @@
       </div>
     </section>
     <!-- Services end-->
-    
+    <section id="text2" class="text-page section-inverse">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <h2 class="heading">Academic Projects</h2>
+              <div class="row">
+                <div class="col-md-6">
+                  <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
+                  <p>Betrayed cheerful declared end and. Questions we additions is extremely incommode. Next half add call them eat face. Age lived smile six defer bed their few. Had admitting concluded too behaviour him she. Of death to or to being other. </p>
+                </div>
+                <div class="col-md-6">
+                  <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>
+                  <p>Saw yet kindness too replying whatever marianne. Old sentiments resolution admiration unaffected its mrs literature. Behaviour new set existence dashwoods. It satisfied to mr commanded consisted disposing engrossed. Tall snug do of till on easy. Form not calm new fail. </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     <!-- Portfolio / gallery-->
     <section id="portfolio" class="gallery">
       <div class="container clearfix">
@@ -241,7 +261,7 @@
       <div class="container"> 
         <div class="row copyright">
           <div class="col-md-6">
-            <p class="mb-md-0 text-center text-md-left">&copy;2019 Your name/company goes here</p>
+            <p class="mb-md-0 text-center text-md-left">&copy;2019 Jan Farun</p>
           </div>
           <div class="col-md-6">
             <p class="credit mb-md-0 text-center text-md-right">Template by <a href="https://bootstrapious.com/p/how-to-build-a-working-bootstrap-contact-form">Bootstrapious</a></p>
