--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
               </div>
               <div class="col-md-4">
                 <div class="box">
-                  <div class="icon"><i class="fa fa-globe"></i></div>
-                  <h5>SEO and SEM</h5>
-                  <p>Am terminated it excellence invitation projection as. She graceful shy. </p>
+                  <div class="icon"><i class="fas fa-award"></i></div>
+                  <h5>Honors and Awards</h5>
+                  <p>ACCNA Routing and Switching: Introduction to Networks.I recived Letter of Merit that is signed by Cisco CEO Chuck Robbins that is awarded to students and instructors who score 75% or above on their course final exam to acknowledge the excellence they have achieved. I had score of 98%.</p>
                 </div>
               </div>
             </div>
