--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
           <div class="row">
             <div class="col-lg-8 col-md-12 mx-auto">
               <h1>Jan Farun</h1>
-              <p class="italic">"Do what you love and you will never have to work."<br>
+              <h2 class="seda">Seda My Love</h2>
+              <h2 class="seda">Jan</h2>
+              <p class="italic">"Do what you love, you will never have to work and people around you will be inspire by you passion."<br>
                 Jan Farun</p>
             </div>
           </div>
@@ -55,7 +57,7 @@
               <li class="nav-item"><a href="#about" class="nav-link link-scroll">About </a></li>
               <li class="nav-item"><a href="#services" class="nav-link link-scroll">Academic Credentials</a></li>
               <li class="nav-item"><a href="#text2" class="nav-link link-scroll">Academic Projects</a></li>
-              <li class="nav-item"><a href="#portfolio" class="nav-link link-scroll">Portfolio</a></li>
+              <li class="nav-item"><a href="#portfolio" class="nav-link link-scroll">Capstone Project</a></li>
               <li class="nav-item"><a href="#text" class="nav-link link-scroll">Text</a></li>
               <li class="nav-item"><a href="#contact" class="nav-link link-scroll">Contact</a></li>
             </ul>
@@ -126,10 +128,13 @@
               <h2 class="heading">Academic Projects</h2>
               <div class="row">
                 <div class="col-md-6">
+                  <h3>Cosmic Adventures</h3>
                   <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
+                  <h3>Travel Guru</h3>
                   <p>Betrayed cheerful declared end and. Questions we additions is extremely incommode. Next half add call them eat face. Age lived smile six defer bed their few. Had admitting concluded too behaviour him she. Of death to or to being other. </p>
                 </div>
                 <div class="col-md-6">
+                  <h4>XYZ</h4>
                   <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>
                   <p>Saw yet kindness too replying whatever marianne. Old sentiments resolution admiration unaffected its mrs literature. Behaviour new set existence dashwoods. It satisfied to mr commanded consisted disposing engrossed. Tall snug do of till on easy. Form not calm new fail. </p>
                 </div>
@@ -145,7 +150,7 @@
           <div class="col-lg-12">
             <div class="row">
               <div class="col-md-12 col-lg-8">
-                <h2 class="heading">Portfolio</h2>
+                <h2 class="heading">Capstone Project</h2>
                 <p>Put your portfolio or gallery images here for example. Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
               </div>
             </div>
