--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
               <li class="nav-item"><a href="#services" class="nav-link link-scroll">Academic Credentials</a></li>
               <li class="nav-item"><a href="#text2" class="nav-link link-scroll">Academic Projects</a></li>
               <li class="nav-item"><a href="#portfolio" class="nav-link link-scroll">Capstone Project</a></li>
-              <li class="nav-item"><a href="#text" class="nav-link link-scroll">Text</a></li>
               <li class="nav-item"><a href="#contact" class="nav-link link-scroll">Contact</a></li>
             </ul>
           </div>
@@ -133,7 +132,8 @@
                 </div>
                 <div class="col-md-6">
                   <h4>XYZ</h4>
-                  <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>
+                  <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed.</p>
+                  <h4>Need a Hand</h4>
                   <p>Saw yet kindness too replying whatever marianne. Old sentiments resolution admiration unaffected its mrs literature. Behaviour new set existence dashwoods. It satisfied to mr commanded consisted disposing engrossed. Tall snug do of till on easy. Form not calm new fail. </p>
                 </div>
               </div>
@@ -149,69 +149,46 @@
             <div class="row">
               <div class="col-md-12 col-lg-8">
                 <h2 class="heading">Capstone Project</h2>
-                <p>Put your portfolio or gallery images here for example. Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
+                <p>This project was created in collaboration with a local Toronto business: The Sword & Board to create an effective website to manage card inventory, pricing and availability.</p>
+                <p>The Sword & Board (store) has been in business for a few years now serving customers from all edges of the gaming world. They are collectors and enthusiasts of board games, RPG’s, CGC’s and miniature war-gaming. One of their most actively selling games is Magic: The Gathering (MTG) trading cards. It was released in 1993 and is been continuously growing over time. The massive following estimated to be about 20 million players in 2015. 
+Transactions have been purely physical thus far and the store does not currently have a way for customers to go online and check card inventory, prices, previous transaction history, store credit balance and more. The OMP solution that our team is proposing will solve this problem and create an effective tool that the store can use to showcase their MTG card collection and track the day-to-day transactions of players. 
+</p>
+                <h6><a href="https://www.theswordandboardtoronto.com"><h5>Swoard & Board Store</h5></a></h6>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-md-4">
+                <h6>Project Vision</h6>
+                <div class="box"><a target="_empty" href="img/Capstone Project/Sprint 1/T02_Project Vision.pdf"><img src="img/cat.jpg" alt="image" class="img-fluid"></a></div>
+              </div>
+              <div class="col-md-4">
+                  <h6>Project Requirements</h6>
+                <div class="box"><a target="_empty" href="img/Capstone Project/Sprint 1/T02_High Level Requirements.pdf"><img src="img/wolf.jpg" alt="image" class="img-fluid"></a></div>
+              </div>
+              <div class="col-md-4">
+                  <h6>Project Plan</h6>
+                <div class="box"><a target="_empty" href="img/Capstone Project/Sprint 2/T02_Project Plan _ Team Charter.pdf"><img src="img/ele.jpg" alt="image" class="img-fluid"></a></div>
               </div>
             </div>
             <div class="row">
               <div class="col-md-4">
-                <div class="box"><a href="img/portfolio-1.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-1.jpg" alt="image" class="img-fluid"></a></div>
+                  <h6>Requirements Analysis </h6>
+                <div class="box"><a target="_empty" href="img/Capstone Project/Technology Requirements.pdf"><img src="img/owl.jpg" alt="image" class="img-fluid"></a></div>
               </div>
               <div class="col-md-4">
-                <div class="box"><a href="img/portfolio-2.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-2.jpg" alt="image" class="img-fluid"></a></div>
+                  <h6>Wireframes/Mock ups</h6>
+                <div class="box"><a target="_empty" href="img/Capstone Project/T127-2018-T02 The Sword and Board Web App (1).pdf"><img src="img/fox.jpg" alt="image" class="img-fluid"></a></div>
               </div>
               <div class="col-md-4">
-                <div class="box"><a href="img/portfolio-3.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-3.jpg" alt="image" class="img-fluid"></a></div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-4">
-                <div class="box"><a href="img/portfolio-4.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-4.jpg" alt="image" class="img-fluid"></a></div>
-              </div>
-              <div class="col-md-4">
-                <div class="box"><a href="img/portfolio-5.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-5.jpg" alt="image" class="img-fluid"></a></div>
-              </div>
-              <div class="col-md-4">
-                <div class="box"><a href="img/portfolio-6.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-6.jpg" alt="image" class="img-fluid"></a></div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-4">
-                <div class="box"><a href="img/portfolio-7.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-7.jpg" alt="image" class="img-fluid"></a></div>
-              </div>
-              <div class="col-md-4">
-                <div class="box"><a href="img/portfolio-8.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-8.jpg" alt="image" class="img-fluid"></a></div>
-              </div>
-              <div class="col-md-4">
-                <div class="box"><a href="img/portfolio-9.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img src="img/portfolio-9.jpg" alt="image" class="img-fluid"></a></div>
+                  <h6>Status Reports</h6>
+                <div class="box"><a target="_empty" href="img/Capstone Project/W19_COMP 3078 Project Status Report 3.pdf"><img src="img/dog.jpg" alt="image" class="img-fluid"></a></div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- Portfolio / gallery end-->
-    <!-- text page-->
-    <section id="text" class="text-page section-inverse">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <h2 class="heading">Text page</h2>
-            <div class="row">
-              <div class="col-md-6">
-                <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
-                <p>Betrayed cheerful declared end and. Questions we additions is extremely incommode. Next half add call them eat face. Age lived smile six defer bed their few. Had admitting concluded too behaviour him she. Of death to or to being other. </p>
-              </div>
-              <div class="col-md-6">
-                <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>
-                <p>Saw yet kindness too replying whatever marianne. Old sentiments resolution admiration unaffected its mrs literature. Behaviour new set existence dashwoods. It satisfied to mr commanded consisted disposing engrossed. Tall snug do of till on easy. Form not calm new fail. </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- text page end-->
-    <!-- contact-->
     <section id="contact" style="background-color: #fff;" class="text-page pb-4"> 
       <div class="container">
         <div class="row">
@@ -240,7 +217,7 @@
                       <input type="email" name="email" placeholder="Enter your  email" required="required" class="form-control">
                     </div>
                     <div class="form-group">
-                      <label for="surname">Your message for us *</label>
+                      <label for="surname">Your message *</label>
                       <textarea rows="4" name="message" placeholder="Enter your message" required="required" class="form-control"></textarea>
                     </div>
                     <div class="text-center">
@@ -250,16 +227,13 @@
                 </form>
               </div>
               <div class="col-lg-6">
-                <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>
-                <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
-                <p class="social"><a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="#" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="#" title="" class="gplus"><i class="fa fa-google-plus"></i></a><a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a><a href="#" title="" class="email"><i class="fa fa-envelope"></i></a></p>
+                <p class="social"><a href="https://www.facebook.com/jan.farun" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="#" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="#" title="" class="gplus"><i class="fa fa-google-plus"></i></a><a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a><a href="#" title="" class="email"><i class="fa fa-envelope"></i></a><a href="https://ca.linkedin.com/in/jan-farun-6a895414b" title="" class="facebook"><i class="fa fa-linkedin"></i></a></p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <div id="map"></div>
     <footer style="background-color: #111;">
       <div class="container"> 
         <div class="row copyright">
