--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="row">
             <div class="col-lg-8 col-md-12 mx-auto">
               <h1>Jan Farun</h1>
-              <p class="italic">"Do what you love, you will never have to work and people around you will be inspire by you passion."<br>
+              <p class="italic">"Do what you love, you will never have to work and people around you will be inspire by your passion."<br>
                 Jan Farun</p>
             </div>
           </div>
