--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ Transactions have been purely physical thus far and the store does not currently
                 </form>
               </div>
               <div class="col-lg-6">
-                <p class="social"><a href="https://www.facebook.com/jan.farun" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="#" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="#" title="" class="gplus"><i class="fa fa-google-plus"></i></a><a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a><a href="#" title="" class="email"><i class="fa fa-envelope"></i></a><a href="https://ca.linkedin.com/in/jan-farun-6a895414b" title="" class="facebook"><i class="fa fa-linkedin"></i></a></p>
+                <p class="social"><a href="https://www.facebook.com/jan.farun" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/FarunJan" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="https://ca.linkedin.com/in/jan-farun-6a895414b" title="" class="facebook"><i class="fa fa-linkedin"></i></a></p>
               </div>
             </div>
           </div>
