--- a/index.html
+++ b/index.html
@@ -153,35 +153,37 @@
                 <p>The Sword & Board (store) has been in business for a few years now serving customers from all edges of the gaming world. They are collectors and enthusiasts of board games, RPG’s, CGC’s and miniature war-gaming. One of their most actively selling games is Magic: The Gathering (MTG) trading cards. It was released in 1993 and is been continuously growing over time. The massive following estimated to be about 20 million players in 2015. 
 Transactions have been purely physical thus far and the store does not currently have a way for customers to go online and check card inventory, prices, previous transaction history, store credit balance and more. The OMP solution that our team is proposing will solve this problem and create an effective tool that the store can use to showcase their MTG card collection and track the day-to-day transactions of players. 
 </p>
-                <h6><a href="https://www.theswordandboardtoronto.com"><h5>Swoard & Board Store</h5></a></h6>
+                <h6><a href="https://www.theswordandboardtoronto.com">Swoard & Board Store</a></h6>
               </div>
             </div>
             <hr>
+            <h6>Project ...</h6>
+            <br>
             <div class="row">
               <div class="col-md-4">
-                <h6>Project Vision</h6>
+                <h6>Vision</h6>
                 <div class="box"><a target="_empty" href="img/Capstone Project/Sprint 1/T02_Project Vision.pdf"><img src="img/cat.jpg" alt="image" class="img-fluid"></a></div>
               </div>
               <div class="col-md-4">
-                  <h6>Project Requirements</h6>
+                  <h6>Requirements</h6>
                 <div class="box"><a target="_empty" href="img/Capstone Project/Sprint 1/T02_High Level Requirements.pdf"><img src="img/wolf.jpg" alt="image" class="img-fluid"></a></div>
               </div>
               <div class="col-md-4">
-                  <h6>Project Plan</h6>
+                  <h6>Plan</h6>
                 <div class="box"><a target="_empty" href="img/Capstone Project/Sprint 2/T02_Project Plan _ Team Charter.pdf"><img src="img/ele.jpg" alt="image" class="img-fluid"></a></div>
               </div>
             </div>
             <div class="row">
               <div class="col-md-4">
-                  <h6>Requirements Analysis </h6>
+                  <h6>Analysis </h6>
                 <div class="box"><a target="_empty" href="img/Capstone Project/Technology Requirements.pdf"><img src="img/owl.jpg" alt="image" class="img-fluid"></a></div>
               </div>
               <div class="col-md-4">
-                  <h6>Wireframes/Mock ups</h6>
+                  <h6>Wireframes</h6>
                 <div class="box"><a target="_empty" href="img/Capstone Project/T127-2018-T02 The Sword and Board Web App (1).pdf"><img src="img/fox.jpg" alt="image" class="img-fluid"></a></div>
               </div>
               <div class="col-md-4">
-                  <h6>Status Reports</h6>
+                  <h6>Status Report</h6>
                 <div class="box"><a target="_empty" href="img/Capstone Project/W19_COMP 3078 Project Status Report 3.pdf"><img src="img/dog.jpg" alt="image" class="img-fluid"></a></div>
               </div>
             </div>
