--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="css/custom.css">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="img/favicon.png">
+    <link rel="shortcut icon">
     <!-- Leaflet CSS - For the map-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.css">
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
@@ -126,7 +126,17 @@
               <div class="row">
                 <div class="col-md-6">
                   <h3>Cosmic Adventures</h3>
-                  <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
+                  <p>Cosmic Adventures is an iOS game that was developed in sixth semester of my program at George Brown College.
+                     Our team decided to make a game for our iOS project, we used Apple’s SpriteKit framework to create this game.
+                      Our thought behind this decision was that, we going to learn how to make applications any ways so we wanted to
+                       extend our developing experience and learn even more, especially because everyone in our team is games fun and
+                        making one will be amazing experience. Our game is called “Cosmic Adventures” and it will space game that, player
+                         controls spaceship and must destroy incoming enemies that shot lasers at player and other objects like meteors
+                          that will destroy player if he touches them. Player will be able to move left and right, we are also planning
+                           on moving background that simulates spaceship flight, it will be simple repeating graphic or particle emitter
+                            with moving stars and other objects you might come across in space. This project is simple yet challenging 
+                            since we didn’t  have experience in iOS development especially in game development, but this was a fun and
+                             interesting project.</p>
                   <h3>Travel Guru</h3>
                   <p>Betrayed cheerful declared end and. Questions we additions is extremely incommode. Next half add call them eat face. Age lived smile six defer bed their few. Had admitting concluded too behaviour him she. Of death to or to being other. </p>
                 </div>
