--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             <p>
               I live in Toronto.
                I love programming, creating software and application with other people. If I’m not working on something
-                I’m probably researching how to create more amazing things.
-                 I’m reaching for the starts. </p>
+                I’m probably researching how to create more amazing things.I have fantastic imagination,
+                 but I can’t imagine myself being anything else other than a programmer. </p>
             <p><a target="_blank" href="img/presentation resume.rtf.pdf">Resume</a></p>
             <p><a target="_blank" href="img/Presentation cover letter.rtf.pdf">Cover Letter</a></p>
           </div>
@@ -138,13 +138,17 @@
                             since we didn’t  have experience in iOS development especially in game development, but this was a fun and
                              interesting project.</p>
                   <h3>Travel Guru</h3>
-                  <p>Betrayed cheerful declared end and. Questions we additions is extremely incommode. Next half add call them eat face. Age lived smile six defer bed their few. Had admitting concluded too behaviour him she. Of death to or to being other. </p>
+                  <p>Travel Guru is an application that allows customer to store personal information about their upcoming trips. Customer
+                     information is safe is database and incase of their documents or information being lost they can login and access all
+                      information that they stored in our system.</p>
                 </div>
                 <div class="col-md-6">
                   <h4>XYZ</h4>
-                  <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed.</p>
+                  <p>XYZ was an Android application that allowed companies to scheduled events and allowed to see list of speakers,
+                     participants and donors that made this event happened.
+                     It is a simple application that allows companies employees to stay connected to events organized by their employers.</p>
                   <h4>Need a Hand</h4>
-                  <p>Saw yet kindness too replying whatever marianne. Old sentiments resolution admiration unaffected its mrs literature. Behaviour new set existence dashwoods. It satisfied to mr commanded consisted disposing engrossed. Tall snug do of till on easy. Form not calm new fail. </p>
+                  <p></p>
                 </div>
               </div>
             </div>
@@ -160,9 +164,11 @@
               <div class="col-md-12 col-lg-8">
                 <h2 class="heading">Capstone Project</h2>
                 <p>This project was created in collaboration with a local Toronto business: The Sword & Board to create an effective website to manage card inventory, pricing and availability.</p>
-                <p>The Sword & Board (store) has been in business for a few years now serving customers from all edges of the gaming world. They are collectors and enthusiasts of board games, RPG’s, CGC’s and miniature war-gaming. One of their most actively selling games is Magic: The Gathering (MTG) trading cards. It was released in 1993 and is been continuously growing over time. The massive following estimated to be about 20 million players in 2015. 
-Transactions have been purely physical thus far and the store does not currently have a way for customers to go online and check card inventory, prices, previous transaction history, store credit balance and more. The OMP solution that our team is proposing will solve this problem and create an effective tool that the store can use to showcase their MTG card collection and track the day-to-day transactions of players. 
-</p>
+                <p>The Sword & Board (store) has been in business for a few years now serving customers from all edges of the gaming world. They are collectors and enthusiasts of board games, RPG’s,
+                   CGC’s and miniature war-gaming. One of their most actively selling games is Magic: The Gathering (MTG) trading cards. It was released in 1993 and is been continuously growing over
+                    time. The massive following estimated to be about 20 million players in 2015. Transactions have been purely physical thus far and the store does not currently have a way for customers
+                     to go online and check card inventory, prices, previous transaction history, store credit balance and more. The OMP solution that our team is proposing will solve this problem and create
+                      an effective tool that the store can use to showcase their MTG card collection and track the day-to-day transactions of players</p>
                 <h6><a href="https://www.theswordandboardtoronto.com">Swoard & Board Store</a></h6>
               </div>
             </div>
