--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@
                   <h3>Travel Guru</h3>
                   <p>Travel Guru is an application that allows customer to store personal information about their upcoming trips. Customer
                      information is safe is database and incase of their documents or information being lost they can login and access all
-                      information that they stored in our system.</p>
+                      information that they stored in our system. For this project we had to use .ASP which gave us a lot of experience dealing
+                       with web forms and validation of this forms,
+                       it helped us allow to developed skills to keep data consistence in our database.</p>
                 </div>
                 <div class="col-md-6">
                   <h4>XYZ</h4>
@@ -148,6 +150,8 @@
                      participants and donors that made this event happened.
                      It is a simple application that allows companies employees to stay connected to events organized by their employers.</p>
                   <h4>Need a Hand</h4>
+                  <p></p>
+                  <h4>Chat App</h4>
                   <p></p>
                 </div>
               </div>
