Final update before mark

--- a/index.html
+++ b/index.html
@@ -137,22 +137,31 @@
                             with moving stars and other objects you might come across in space. This project is simple yet challenging 
                             since we didn’t  have experience in iOS development especially in game development, but this was a fun and
                              interesting project.</p>
+                             <h4>Chat App</h4>
+                             <p>This app was developed in my last semester of school with my friend Saif Mustaf. It’s one of my best apps, its developed with MEAN
+                                stack and Socket IO which are amazing technologies.
+                                Users can just go to this app and start their own chat room and talk to other people just like they would in other chat apps.</p>
+                             <a id="links" href="http://sfmustafa2-chatter.s3-website.us-east-2.amazonaws.com">Preview my app here...</a>
+                          <h4>Video Store App</h4>
+                          <p>Simple app for videos stores to monitor movie rentals and availability developed in fifth semester of my program using MEAN stack.</p>
+                          <a id="links" href="http://sfmustafa2-video-store.s3-website.us-east-2.amazonaws.com">Preview my app here...</a>
+                </div>
+                <div class="col-md-6">
+                  <h4>Need a Hand</h4>
+                  <p>Need a Hand was developed in my third semester and it is fantastic app using Google’s API that allowed customers
+                     to make mark on map and leave a message with it for anything they wanted to, giving stuff away, looking someone to
+                      help, posting jobs or even looking for work. Customers could manage their account add and remove their postings and
+                       customers could talk to each other if they were interested.</p>
+                       <h4>XYZ</h4>
+                       <p>XYZ was an Android application that allowed companies to scheduled events and allowed to see list of speakers,
+                          participants and donors that made this event happened.
+                          It is a simple application that allows companies employees to stay connected to events organized by their employers.</p>
                   <h3>Travel Guru</h3>
                   <p>Travel Guru is an application that allows customer to store personal information about their upcoming trips. Customer
                      information is safe is database and incase of their documents or information being lost they can login and access all
                       information that they stored in our system. For this project we had to use .ASP which gave us a lot of experience dealing
                        with web forms and validation of this forms,
                        it helped us allow to developed skills to keep data consistence in our database.</p>
-                </div>
-                <div class="col-md-6">
-                  <h4>XYZ</h4>
-                  <p>XYZ was an Android application that allowed companies to scheduled events and allowed to see list of speakers,
-                     participants and donors that made this event happened.
-                     It is a simple application that allows companies employees to stay connected to events organized by their employers.</p>
-                  <h4>Need a Hand</h4>
-                  <p></p>
-                  <h4>Chat App</h4>
-                  <p></p>
                 </div>
               </div>
             </div>
