--- a/index.html
+++ b/index.html
@@ -224,13 +224,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <h2 class="heading">Contact</h2>
-            <div class="row">
-              <div class="col-lg-6">
-              </div>
-              <div class="col-lg-6">
+            <h2 class="heading">Contact Me</h2>
                 <p class="social"><a href="https://www.facebook.com/jan.farun" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/FarunJan" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="https://ca.linkedin.com/in/jan-farun-6a895414b" title="" class="facebook"><i class="fa fa-linkedin"></i></a></p>
-              </div>
             </div>
           </div>
         </div>
