--- a/index.html
+++ b/index.html
@@ -221,9 +221,8 @@
       </div>
     </section>
     <section id="contact" style="background-color: #fff;" class="text-page pb-4"> 
-        <div class="row">
-            <h2>Contact Me</h2>
-          </div>
+      <div class="container"></div>
+          <h2>Contact Me</h2>
           <p class="social"><a href="https://www.facebook.com/jan.farun" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/FarunJan" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="https://ca.linkedin.com/in/jan-farun-6a895414b" title="" class="facebook"><i class="fa fa-linkedin"></i></a></p>
       </div>
     </section>
