--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <section id="contact" style="background-color: #fff;" class="text-page pb-4"> 
       <div class="container"></div>
         <div class="row"></div>
-            <h2 id="zzz">Contact Me...</h2>
+            <h2 id="zzz">Contact Me</h2>
             <hr>
             <p class="social"><a href="https://www.facebook.com/jan.farun" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/FarunJan" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="https://ca.linkedin.com/in/jan-farun-6a895414b" title="" class="facebook"><i class="fa fa-linkedin"></i></a></p>
         </div>
