--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="row">
           <div class="col-lg-6">
             <h2 class="heading">About me</h2>
-            <p class="lead">My name is Jan Farun. I’m computer programmer analyst.</p>
+            <p class="lead">My name is Jan Farun. I’m a computer programmer analyst.</p>
             <p>
               I live in Toronto.
                I love programming, creating software and application with other people. If I’m not working on something
