--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
   </head>
   <body>
-    <!--<section id="intro" style="background-image: url('img/main.jpg');" class="intro">-->
-    <section id="intro"  <video width="320" height="240" controls>
-    <video>
-  <source src="img/Black - 13495.mp4  " type="video/mp4">
-Your browser does not support the video tag.
-</video>  class="intro">  Black - 13495.mp4     
+  <section id="intro" style="background-image: url('img/main.jpg');" class="intro">
       <div class="overlay"></div>
       <div class="content">
         <div class="container clearfix">
